--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,3 +4,13 @@ image:
   - Visual Studio 2019
   - Ubuntu
   - macOS
+
+before_build:
+  - nuget restore
+
+artifacts:
+  - path: test.zip
+    name: CoreTestProject
+
+after_build:
+  7z a test.zip %APPVEYOR_BUILD_FOLDER%/CoreTestProject/bin/Debug/netcoreapp3.1/*
