--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,6 @@ before_build:
   - nuget restore
 
 artifacts:
-  - path: %APPVEYOR_BUILD_FOLDER%/CoreTestProject/bin/Debug/netcoreapp3.1/
+  - path: CoreTestProject/bin/Debug/netcoreapp3.1/
     name: CoreTestProject
     type: zip
